Connman: allow multiple connections at the same time

--- a/recipes-connectivity/connman/files/main.conf
+++ b/recipes-connectivity/connman/files/main.conf
@@ -89,7 +89,7 @@ PreferredTechnologies = ethernet,wifi
 # user will be used until going out of network coverage. With this
 # setting enabled applications will notice more network breaks than
 # normal. Default value is false.
-SingleConnectedTechnology = true
+SingleConnectedTechnology = false
 
 # List of technologies for which tethering is allowed separated by ",".
 # The default value is wifi,bluetooth,gadget. Only those technologies
