cacao: remove distro vendor

--- a/conf/distro/cacao.conf
+++ b/conf/distro/cacao.conf
@@ -5,7 +5,7 @@ DISTRO_CODENAME = "cacao"
 DISTRO_NAME = "Cacao"
 
 SDK_VENDOR = "-chik"
-TARGET_VENDOR = "-chik"
+TARGET_VENDOR = ""
 
 # Features
 DISTRO_FEATURES="\
