Unify image properties

--- a/conf/machine/unipi-neuron.conf
+++ b/conf/machine/unipi-neuron.conf
@@ -16,10 +16,10 @@ PREFERRED_PROVIDER_jpeg = ""
 MACHINE_FEATURES = "apm usbhost keyboard vfat ext2 wifi sdio rtc"
 
 # Consider using uboot in the future
-RPI_USE_U_BOOT = "0"
+RPI_USE_U_BOOT = "1"
 KBUILD_DEFCONFIG = "chik_unipi_neuron_defconfig"
 KERNEL_DEVICETREE = "bcm2710-rpi-3-b.dtb"
 
-IMAGE_FSTYPES = "ext4 wic"
+IMAGE_FSTYPES = "ext4.gz wic"
 WKS_FILE = "chik-partitions.wks"
 SERIAL_CONSOLES = "115200;ttyAMA0"
