--- a/conf/machine/rpi-0w.conf
+++ b/conf/machine/rpi-0w.conf
@@ -16,6 +16,6 @@ PREFERRED_PROVIDER_virtual/mesa = ""
 PREFERRED_PROVIDER_virtual/libgbm = ""
 PREFERRED_PROVIDER_jpeg = ""
 
-IMAGE_FSTYPES = "ext3 rpi-sdimg wic"
+IMAGE_FSTYPES = "ext4.gz wic"
 WKS_FILE = "chik-partitions.wks"
 SERIAL_CONSOLES = ""
