--- a/recipes-connectivity/connman/files/main.conf
+++ b/recipes-connectivity/connman/files/main.conf
@@ -26,7 +26,7 @@
 # BackgroundScanning = true
 
 # Assume that service gateways also function as timeservers.
-# UseGatewaysAsTimeservers = false
+UseGatewaysAsTimeservers = false
 
 # List of Fallback timeservers separated by ",".
 # These timeservers are used for NTP sync when there are
@@ -34,7 +34,7 @@
 # when UseGatewaysAsTimeservers = false. These can contain
 # mixed combination of fully qualified domain names, IPv4
 # and IPv6 addresses.
-# FallbackTimeservers =
+FallbackTimeservers = 0.it.pool.ntp.org,1.it.pool.ntp.org,2.it.pool.ntp.org,3.it.pool.ntp.org
 
 # List of fallback nameservers separated by "," used if no
 # nameservers are otherwise provided by the service. The
