Move to dunfell

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-chik = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-chik = "6"
 
 LAYERDEPENDS_meta-chik = "core"
-LAYERSERIES_COMPAT_meta-chik = "zeus"
+LAYERSERIES_COMPAT_meta-chik = "zeus dunfell"
