unipi-neuron: use raaspberrypi kernel

--- a/conf/machine/unipi-neuron.conf
+++ b/conf/machine/unipi-neuron.conf
@@ -4,7 +4,7 @@
 
 include conf/machine/raspberrypi3.conf
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-unipi"
+PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi"
 PREFERRED_PROVIDER_virtual/xserver = ""
 PREFERRED_PROVIDER_virtual/egl = ""
 PREFERRED_PROVIDER_virtual/libgles2 = ""
@@ -17,8 +17,7 @@ MACHINE_FEATURES = "apm usbhost keyboard vfat ext2 wifi sdio rtc"
 
 # Consider using uboot in the future
 RPI_USE_U_BOOT = "0"
-KBUILD_DEFCONFIG = "chik_unipi_neuron_defconfig"
-KERNEL_DEVICETREE = "bcm2710-rpi-3-b.dtb"
+KERNEL_DEVICETREE = "bcm2710-rpi-3-b-neuron.dtb"
 
 IMAGE_FSTYPES = "ext4.gz wic"
 WKS_FILE = "chik-partitions.wks"
