--- a/conf/machine/unipi-neuron.conf
+++ b/conf/machine/unipi-neuron.conf
@@ -13,12 +13,12 @@ PREFERRED_PROVIDER_virtual/mesa = ""
 PREFERRED_PROVIDER_virtual/libgbm = ""
 PREFERRED_PROVIDER_jpeg = ""
 
-MACHINE_FEATURES = "apm usbhost keyboard vfat ext2 wifi sdio rtc"
+MACHINE_FEATURES = "apm usbhost vfat ext2 wifi sdio rtc"
 
 # Consider using uboot in the future
 RPI_USE_U_BOOT = "0"
 KERNEL_DEVICETREE = "bcm2710-rpi-3-b-neuron.dtb"
 
-IMAGE_FSTYPES = "ext4.gz wic"
+IMAGE_FSTYPES = "ext4.gz wic.gz"
 WKS_FILE = "chik-partitions.wks"
 SERIAL_CONSOLES = "115200;ttyAMA0"
